--- a/batch/wrangler.jsonc
+++ b/batch/wrangler.jsonc
@@ -20,7 +20,10 @@
 			"binding": "BUCKET",
 			"bucket_name": "kanto-fab-events-ical"
 		}
-	]
+	],
+	"vars": {
+		"ENV": "cloudflare"
+	}
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
